Fix layout problem introduced by changing control labels to display:block

--- a/app/assets/stylesheets/_lr-common.scss
+++ b/app/assets/stylesheets/_lr-common.scss
@@ -124,6 +124,10 @@ input[type=radio] {
     display: block;
   }
 
+  .o-form-control--label-inline {
+    display: inline-block;
+  }
+
   .o-form-control--label input[type=text] {
     // margin-left: 0.8rem;
     width: 100%;
